buang trunk. Biasalah, zaman dulu aku guna svn. baru berjinak-jinak dengan git ni. Ampun sifu-sifu semua.

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-This is apogeek code repo.
+@ Pengarang: M. Fauzilkamil Zainuddin
+@ Tajuk: APOGEEK Code Repository
+
+apogeekcode ini adalah repo tempat simpan kod sumber yang saya buat untuk kegunaan macam-macam.
+
+Saya tiada gerenti bahawa semua kod yang saya buat akan berfungsi dengan baik dalam semua keadaan.
+Ia mungkin menimbulkan masalah lain kepada anda. Jika anda tiada idea apa yang dilakukan oleh kod 
+tersebut, lebih baik jangan guna.
