--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-@ Pengarang: M. Fauzilkamil Zainuddin
+@ Pengarang: M. Fauzilkamil Zainuddin <apogee@apogeek.com>
 @ Tajuk: APOGEEK Code Repository
+@ Copyright (C) 2011, M. Fauzilkamil Zainuddin
 
 apogeekcode ini adalah repo tempat simpan kod sumber yang saya buat untuk kegunaan macam-macam.
 
