kemaskini README untuk Projek ESARTU

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 @ Pengarang: M. Fauzilkamil Zainuddin <apogee@apogeek.com>
-@ Tajuk: APOGEEK Code Repository
+@ Tajuk: Projek Template ESARTU
 @ Copyright (C) 2011, M. Fauzilkamil Zainuddin
 
-apogeekcode ini adalah repo tempat simpan kod sumber yang saya buat untuk kegunaan macam-macam.
+Sebuah eksperimentasi template wordpress.
 
 Saya tiada gerenti bahawa semua kod yang saya buat akan berfungsi dengan baik dalam semua keadaan.
 Ia mungkin menimbulkan masalah lain kepada anda. Jika anda tiada idea apa yang dilakukan oleh kod 
