--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 @ Pengarang: M. Fauzilkamil Zainuddin <apogee@apogeek.com>
-@ Tajuk: APOGEEK Code Repository
+@ Tajuk: Ultratone IPPBX Status 
 @ Copyright (C) 2011, M. Fauzilkamil Zainuddin
 
-apogeekcode ini adalah repo tempat simpan kod sumber yang saya buat untuk kegunaan macam-macam.
+Projek java. Aku nak buat login/logout status update untuk IPPBX Ultratone.
 
 Saya tiada gerenti bahawa semua kod yang saya buat akan berfungsi dengan baik dalam semua keadaan.
 Ia mungkin menimbulkan masalah lain kepada anda. Jika anda tiada idea apa yang dilakukan oleh kod 
